2021-03-10  Mark Galassi  <mark@galassi.org>

	* plot_ga_output.py (plot_runfile): added a title to each plot
	window.  Also added saving this plot to a pdf file.

	* plot_ga_output.py: new program which loads the ouput files from
	GA-poly-max.py and gives a visualization.  At this time it shows
	two aligned plots of fitness vs. generation and entropy
	vs. generation.

2021-03-03  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py (calc_entropy_drift, print_pop_stats)
	(advance_one_generation): switched the entropy calculation to a
	version more appropriate for drift mutations.

	* GA-poly-max.py: introduced an oscillation_scale parameter,
	commented at the top of the code.

	* GA-poly-max.py: experimented with parameters and changed to
	drift mutation instead of bitflip mutation.  The goal is to get a
	royal road, and the current parameters give us such a thing by
	jiggling in each local maximum for a while before finding the next
	higher peak.

2021-02-02  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py: added the random seed setting for
	np.random.seed() (in addition to random.seed()) for reproducible
	runs.

2021-02-01  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py: further adjustment of parameters to get a
	reasonable run with the new fitness function.

2021-01-31  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py: adjusted parameters so that we get an evolution
	rich enough to start drawing conclusions on how it works.

2021-01-29  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py: improved the plotting to allow separate y axes
	for fitness and entropy.

2021-01-28  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py: further improvements in the user friendly
	plotting.  Plot instructions are now invoked with os.system() so
	that gnuplot makes a .pdf file, and a PDF viewer comes up with the
	plot.

	* GA-poly-max.py: added some convenience generating of output
	files with plot information, and started adding (not yet debugged)