@@ -20,8 +20,8 @@ def main():
 
 def plot_runfile(fname):
     print(f'# plotting GA run from file {fname}')
-    gens, max_fit, avg_fit, elite_avg_fit, entropy = load_file(fname)
-    fig, axs = plt.subplots(2, 1)
+    gens, fittest, max_fit, avg_fit, elite_avg_fit, entropy = load_file(fname)
+    fig, axs = plt.subplots(3, 1)
     suptitle = fig.suptitle(f'GA output file {fname}', fontsize='x-large')
     suptitle.set_y(0.98)
     axs[0].plot(gens, max_fit, gens, avg_fit, gens, elite_avg_fit)
@@ -33,19 +33,23 @@ def plot_runfile(fname):
     axs[1].set_xlim(0, gens.size - 1)
     axs[1].set_ylabel('entropy')
 
+    axs[2].plot(gens, fittest)
+    axs[2].set_xlim(0, gens.size - 1)
+    axs[2].set_ylabel('position')
+
     fig.subplots_adjust(top=0.65)
     fig.tight_layout()
     fig.savefig(f'{fname}.pdf')
 
 def load_file(fname):
     # gens, mf, af, eaf, entropy = np.loadtxt(fname, usecols=[1,5,6,7,8])
-    data = np.loadtxt(fname, usecols=[1,5,6,7,8])
+    data = np.loadtxt(fname, usecols=[1,3,5,6,7,8])
     print(data)
     print(data.shape)
     print(data[0])
     print(data[0].shape)
-    gens, mf, af, eaf, entropy = np.transpose(data)
-    return gens, mf, af, eaf, entropy
+    gens, fittest, mf, af, eaf, entropy = np.transpose(data)
+    return gens, fittest, mf, af, eaf, entropy
 
 if __name__ == '__main__':
     main()
